feat: Successfully integrated Tailwind CSS v3 and DaisyUI v4 with Svelte 3

--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,6 @@
 <head>
-    <title>Meteor App</title>
+  <title>Meteor Chat App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-
-<body>
-<div id="app"></div>
+<body data-theme="light"> <div id="app"></div>
 </body>
