--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,15 @@
 <head>
-  <title>Meteor Chat App</title>
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>My Meteor Chat App with React</title>
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  />
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  />
 </head>
-<body data-theme="light"> <div id="app"></div>
-</body>
+<body>
+  <div id="react-target"></div> </body>
